con hypermedia y get en gusto individual
