# heladeria-server-springboot/src/main/java/com/heladeriaapilia/api/GustosApiController.java
@@ -1,16 +1,15 @@
 package com.heladeriaapilia.api;
 
-import com.heladeriaapilia.api.dto.TipoDeGusto;
-import com.heladeriaapilia.service.GustoService;
-import com.heladeriaapilia.api.mapper.GustoMapper;
 import com.heladeriaapilia.api.dto.Gusto;
+import com.heladeriaapilia.api.dto.TipoDeGusto;
+import com.heladeriaapilia.api.mapper.GustoMapper;
 import com.heladeriaapilia.model.GustoData;
+import com.heladeriaapilia.service.GustoService;
 import io.swagger.v3.oas.annotations.Parameter;
 import io.swagger.v3.oas.annotations.enums.ParameterIn;
 import io.swagger.v3.oas.annotations.media.Schema;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
@@ -18,12 +17,15 @@ import org.springframework.web.bind.annotation.RestController;
 import javax.servlet.http.HttpServletRequest;
 import javax.validation.Valid;
 import java.util.List;
+import java.util.Optional;
 
 @javax.annotation.Generated(value = "io.swagger.codegen.v3.generators.java.SpringCodegen", date = "2022-04-30T16:07:57.842Z[GMT]")
 @RestController
 public class GustosApiController implements GustosApi {
 
     private static final Logger log = LoggerFactory.getLogger(GustosApiController.class);
+
+    public static final String GUSTO_RESOURCE_PATH = "/gustos";
 
     private final GustoMapper gustoMapper;
 
@@ -46,6 +48,16 @@ public class GustosApiController implements GustosApi {
         List<GustoData> gustos = tipo != null ?
                 gustoService.getGustosByTipo(gustoMapper.apiToDataTipo(tipo)) :
                 gustoService.getGustos();
-        return new ResponseEntity<>(gustoMapper.dataToApiGustos(gustos), HttpStatus.OK);
+        return ResponseEntity.ok(gustoMapper.dataToApiGustos(gustos));
+    }
+
+    @Override
+    public ResponseEntity<Gusto> gustosGustoIdGet(String gustoId) {
+        Optional<GustoData> maybeGusto = gustoService.getGustoById(gustoId);
+        if (maybeGusto.isPresent()) {
+            return ResponseEntity.ok(gustoMapper.dataToApiGusto(maybeGusto.get()));
+        } else {
+            return ResponseEntity.notFound().build();
+        }
     }
 }
