# heladeria-server-springboot/src/main/java/com/heladeriaapilia/api/mapper/PedidoMapper.java
@@ -1,12 +1,21 @@
 package com.heladeriaapilia.api.mapper;
 
-import com.heladeriaapilia.model.PedidoData;
+import com.heladeriaapilia.api.GustosApiController;
+import com.heladeriaapilia.api.PedidosApiController;
+import com.heladeriaapilia.api.UriHelper;
+import com.heladeriaapilia.api.dto.Link;
+import com.heladeriaapilia.api.dto.Link.VerbEnum;
 import com.heladeriaapilia.api.dto.Pedido;
+import com.heladeriaapilia.api.dto.PedidoLinks;
 import com.heladeriaapilia.api.dto.PesoDePote;
 import com.heladeriaapilia.api.dto.Pote;
 import com.heladeriaapilia.api.dto.PoteGustos;
+import com.heladeriaapilia.api.dto.PoteLinks;
+import com.heladeriaapilia.api.dto.PoteLinks1;
+import com.heladeriaapilia.model.PedidoData;
 import com.heladeriaapilia.model.PoteData;
 import com.heladeriaapilia.model.PoteData.PesoDePoteData;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
@@ -15,10 +24,22 @@ import java.util.stream.Collectors;
 @Component
 public class PedidoMapper {
 
+    private final UriHelper uriHelper;
+
+    @Autowired
+    public PedidoMapper(UriHelper uriHelper) {
+        this.uriHelper = uriHelper;
+    }
+
     public Pedido dataToApiPedido(PedidoData pedidoData) {
+        String self = getPedidoUriStr(pedidoData);
         return new Pedido()
                 .id(pedidoData.getId())
-                .direccionEntrega(pedidoData.getDireccionDeEntrega());
+                .direccionEntrega(pedidoData.getDireccionDeEntrega())
+                ._links(new PedidoLinks()
+                        .pagar(link(VerbEnum.POST, self + "/pagar"))
+                        .pago(link(VerbEnum.GET, self + "/pago"))
+                        .potes(link(VerbEnum.GET, self + "/potes")));
     }
 
     public List<Pedido> dataToApiPedidos(List<PedidoData> pedidoDatas) {
@@ -32,13 +53,20 @@ public class PedidoMapper {
     }
 
     public Pote dataToApiPote(PoteData poteData) {
+        String pedidoUriStr = getPedidoUriStr(poteData.getPedido());
         return new Pote()
                 .id(poteData.getId())
                 .gustos(poteData.getGustos().stream()
                         .map(gusto -> new PoteGustos()
-                                .id(gusto))
+                                .id(gusto)
+                                ._links(new PoteLinks()
+                                        .self(link(VerbEnum.GET, uriHelper.baseUriStr(GustosApiController.GUSTO_RESOURCE_PATH + "/" + gusto)))))
                         .collect(Collectors.toList()))
-                .peso(dataToApiPeso(poteData.getPesoDePote()));
+                .peso(dataToApiPeso(poteData.getPesoDePote()))
+                ._links(new PoteLinks1()
+                        .pedido(link(VerbEnum.GET, pedidoUriStr))
+                        .borrar(link(VerbEnum.DELETE, pedidoUriStr + PedidosApiController.POTE_RESOURCE_PATH + "/" + poteData.getId()))
+                );
     }
 
     private PesoDePote dataToApiPeso(PesoDePoteData pesoData) {
@@ -63,5 +91,15 @@ public class PedidoMapper {
                 return PesoDePoteData._250;
         }
         throw new IllegalArgumentException("Imposible traducir " + peso);
+    }
+
+    private Link link(VerbEnum verb, String uri) {
+        return new Link()
+                .verb(verb)
+                .href(uri);
+    }
+
+    private String getPedidoUriStr(PedidoData poteData) {
+        return uriHelper.baseUriStr(PedidosApiController.PEDIDO_RESOURCE_PATH + "/" + poteData.getId());
     }
 }
